# smcp

./: .gitignore  LICENSE  Makefile  README.md  SPEC.md  requirements.txt
.ccmemory/: .gitignore  .migrated-from  MEMORY.md  feedback_no_underscore_prefix.md
adls/: README.md  pyproject.toml
adls/src/adls_smcp_server/: __init__.py  client.py  server.py
adls/src/adls_smcp_server/tools/: __init__.py  blobs.py  containers.py  directories.py  files.py  filesystems.py  sas.py
alpaca/: README.md  pyproject.toml
alpaca/src/alpaca_smcp_server/: __init__.py  client.py  server.py  tools.py
alphavantage/: README.md  pyproject.toml
alphavantage/src/alphavantage_smcp_server/: __init__.py  client.py  server.py  tools.py
ask/: CHANGELOG.md  README.md  pyproject.toml
ask/src/ask_smcp_server/: __init__.py  config.py  server.py
ask/src/ask_smcp_server/clients/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
ebay/: README.md  pyproject.toml
ebay/src/ebay_smcp_server/: __init__.py  client.py  server.py  tools.py
ecobee/: README.md  pyproject.toml
ecobee/src/ecobee_smcp_server/: __init__.py  client.py  server.py
ecobee/src/ecobee_smcp_server/tools/: __init__.py  events.py  settings.py  status.py
econet/: README.md  pyproject.toml
econet/src/econet_smcp_server/: __init__.py  client.py  server.py  tools.py
homekit/: README.md  pyproject.toml
homekit/src/homekit_smcp_server/: __init__.py  client.py  pair.py  server.py
homekit/src/homekit_smcp_server/tools/: __init__.py  climate.py  generic.py  lights.py  sensors.py
influxdb/: README.md  pyproject.toml
influxdb/src/influxdb_smcp_server/: __init__.py  client.py  server.py  tools.py
lib/: pyproject.toml
lib/smcp/: __init__.py
matrix/: README.md  pyproject.toml
matrix/src/matrix_smcp_server/: __init__.py  client.py  server.py
matrix/src/matrix_smcp_server/tools/: __init__.py  admin.py  admin_server.py  admin_users.py  messaging.py  rooms.py  users.py
moltbook/: README.md  pyproject.toml
moltbook/src/moltbook_smcp_server/: __init__.py  client.py  server.py  tools.py
mqtt/: README.md  pyproject.toml
mqtt/src/mqtt_smcp_server/: __init__.py  client.py  server.py  tools.py
postgres/: README.md  pyproject.toml
postgres/src/postgres_smcp_server/: __init__.py  client.py  server.py
search/: README.md  pyproject.toml
search/src/search_smcp_server/: client.py  config.py  server.py
searxng/: README.md  pyproject.toml
searxng/src/searxng_smcp_server/: __init__.py  client.py  server.py
sharepoint/: README.md  pyproject.toml
sharepoint/src/sharepoint_smcp_server/: __init__.py  client.py  server.py
sharepoint/src/sharepoint_smcp_server/tools/: __init__.py  drives.py  items.py  lists.py  permissions.py  sites.py
