[project]
name = "alpaca-smcp-server"
version = "0.2.1"
description = "SMCP-enabled MCP server for Alpaca Markets trading and market data with secure credential injection"
authors = [
    { name = "SMCP Project" },
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.6.0",
    "smcp",
    "requests>=2.28.0",
]

[project.scripts]
alpaca-smcp-server = "alpaca_smcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alpaca_smcp_server"]

[tool.hatch.build.targets.sdist]
include = ["src/alpaca_smcp_server"]
