[project]
name = "alphavantage-smcp-server"
version = "0.2.0"
description = "SMCP-enabled MCP server for Alpha Vantage market data with secure credential injection"
authors = [
    { name = "SMCP Project" },
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.6.0",
    "smcp",
    "requests>=2.28.0",
]

[project.scripts]
alphavantage-smcp-server = "alphavantage_smcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alphavantage_smcp_server"]

[tool.hatch.build.targets.sdist]
include = ["src/alphavantage_smcp_server"]
