[project]
name = "ecobee-smcp-server"
version = "0.1.1"
description = "SMCP-enabled MCP server for Ecobee thermostats with secure credential injection"
authors = [
    { name = "SMCP Project" },
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["ecobee", "thermostat", "mcp", "smcp", "model-context-protocol"]
dependencies = [
    "mcp>=1.6.0",
    "requests>=2.28.0",
    "smcp",
]

[project.scripts]
ecobee-smcp-server = "ecobee_smcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecobee_smcp_server"]
