[project]
name = "econet-smcp-server"
version = "0.2.1"
description = "SMCP-enabled MCP server for Rheem EcoNet with secure credential injection"
authors = [
    { name = "SMCP Project" },
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["econet", "rheem", "water-heater", "mcp", "smcp", "model-context-protocol"]
dependencies = [
    "mcp>=1.6.0",
    "smcp",
    "requests>=2.28.0",
    "paho-mqtt>=2.0.0",
]

[project.scripts]
econet-smcp-server = "econet_smcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/econet_smcp_server"]
