[project]
name = "homekit-smcp-server"
version = "0.1.0"
description = "SMCP-enabled MCP server for HomeKit devices with secure credential injection"
authors = [
    { name = "SMCP Project" },
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["homekit", "smart-home", "mcp", "smcp", "model-context-protocol"]
dependencies = [
    "mcp>=1.6.0",
    "aiohomekit>=3.0.0",
    "smcp",
]

[project.scripts]
homekit-smcp-server = "homekit_smcp_server.server:main"
homekit-smcp-pair = "homekit_smcp_server.pair:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/homekit_smcp_server"]
