[project]
name = "influxdb-smcp-server"
version = "0.1.0"
description = "SMCP-enabled MCP server for InfluxDB with secure credential injection"
authors = [
    { name = "SMCP Project" },
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["influxdb", "mcp", "smcp", "model-context-protocol", "time-series"]
dependencies = [
    "mcp>=1.6.0",
    "influxdb>=5.3.1",
    "smcp",
]

[project.scripts]
influxdb-smcp-server = "influxdb_smcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/influxdb_smcp_server"]
