[project]
name = "smcp"
version = "0.2.0"
description = "SMCP (Secure MCP Credential Protocol) - Shared handshake library"
authors = [
    { name = "SMCP Project" },
]
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["smcp", "mcp", "credentials", "security"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smcp"]
