[project]
name = "matrix-smcp-server"
version = "0.1.0"
description = "SMCP-enabled MCP server for Matrix with secure credential injection"
authors = [
    { name = "SMCP Project" },
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["matrix", "mcp", "smcp", "model-context-protocol", "chat"]
dependencies = [
    "mcp>=1.6.0",
    "matrix-nio>=0.24.0",
    "smcp",
]

[project.scripts]
matrix-smcp-server = "matrix_smcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/matrix_smcp_server"]
