[project]
name = "moltbook-smcp-server"
version = "0.1.0"
description = "SMCP-enabled MCP server for Moltbook social network API with secure credential injection"
authors = [
    { name = "SMCP Project" },
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["moltbook", "social", "agents", "mcp", "smcp", "model-context-protocol"]
dependencies = [
    "mcp>=1.6.0",
    "smcp",
    "requests>=2.28.0",
]

[project.scripts]
moltbook-smcp-server = "moltbook_smcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moltbook_smcp_server"]

[tool.hatch.build.targets.sdist]
include = ["src/moltbook_smcp_server"]
