[project]
name = "search-smcp-server"
version = "0.1.1"
description = "SMCP-enabled MCP server that exposes a local SearXNG instance as a web-search tool"
authors = [
    { name = "SMCP Project" },
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["search", "searxng", "web", "mcp", "smcp", "model-context-protocol"]
dependencies = [
    "mcp>=1.6.0",
    "httpx>=0.27",
    "smcp",
]

[project.scripts]
search-smcp-server = "search_smcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/search_smcp_server"]
