[project]
name = "sharepoint-smcp-server"
version = "0.1.0"
description = "SMCP-enabled MCP server for SharePoint via Microsoft Graph"
authors = [
    { name = "SMCP Project" },
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["sharepoint", "microsoft-graph", "mcp", "smcp", "model-context-protocol"]
dependencies = [
    "azure-identity>=1.21.0",
    "httpx>=0.27.0",
    "mcp>=1.6.0",
    "smcp",
]

[project.scripts]
sharepoint-smcp-server = "sharepoint_smcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sharepoint_smcp_server"]
